(library
 (name routeguide)
 (package grpc-examples)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries ocaml-protoc pbrt))

(rule
 (targets route_guide.ml)
 (deps
  (:proto route_guide.proto))
 (action
  (run
    ocaml-protoc
    --binary
    --pp
    --ml_out
    .
    %{proto}
)))
